--- a/package.json
+++ b/package.json
@@ -8,15 +8,36 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.4.0",
+    "@react-navigation/stack": "^5.3.7",
+    "base-64": "^0.1.0",
     "expo": "~37.0.3",
+    "firebase": "^7.15.4",
+    "lodash": "^4.17.15",
+    "native-base": "^2.13.12",
     "react": "~16.9.0",
+    "react-countdown": "^2.2.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^1.0.0",
+    "react-native-screens": "^2.7.0",
+    "react-native-web": "~0.11.7",
+    "expo-font": "~8.1.0",
+    "expo-camera": "~8.2.0"
   },
   "devDependencies": {
+    "@babel/runtime": "7.9.6",
+    "@react-native-community/eslint-config": "0.0.5",
+    "babel-jest": "24.9.0",
+    "eslint": "6.8.0",
+    "jest": "24.9.0",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "@babel/core": "^7.8.6",
+    "metro-react-native-babel-preset": "0.58.0",
+    "react-test-renderer": "16.11.0"
   },
   "private": true
 }
